<resources>
    <string name="app_name">Kalkulator Tugas2</string>
    <string name="nol">0</string>
    <string name="satu">1</string>
    <string name="dua">2</string>
    <string name="tiga">3</string>
    <string name="empat">4</string>
    <string name="lima">5</string>
    <string name="enam">6</string>
    <string name="tujuh">7</string>
    <string name="delapan">8</string>
    <string name="sembilan">9</string>
    <string name="ce">CE</string>
    <string name="kurung_buka">(</string>
    <string name="kurung_tutup">)</string>
    <string name="pembagian">÷</string>
    <string name="perkalian">x</string>
    <string name="penjumlahan">+</string>
    <string name="pengurangan">-</string>
    <string name="koma">.</string>
    <string name="hasil">=</string>
</resources>